--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.config.import=file:env.properties
+
 # Database connection properties
-spring.datasource.url=jdbc:postgresql://dpg-cmimibed3nmc73ckff3g-a.oregon-postgres.render.com/spring_boot_test
-spring.datasource.username=spring_boot_test_user
-spring.datasource.password=XEXWXbYDY59YOx0kSMd0uMSFLW3a1iYN
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 # Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
